infrastructure/controllers/staging/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-system
  namespace: longhorn-system
spec:
  ingressClassName: traefik
  rules:
    - host: longhorn.pytt.io
      http:
        paths:
          - backend:
              service:
                name: longhorn-system
                port:
                  number: 80
            path: /
            pathType: Prefix
